crates/supersigil-review/tests/snapshots/snapshots__why_json_and_terminal_are_stable.snap
---
source: crates/supersigil-review/tests/snapshots.rs
expression: why
---
schema: supersigil.why/1
path: src/lib.rs
target:
  worktree: /work/repo
  tree: cccccccccccccccccccccccccccccccccccccccc
  blob: src/lib.rs@target
  attribution_bytes: identical
records:
  - id: rec-1
    revision: 4
    reconciled: true
    reason: ~
  - id: rec-2
    revision: 2
    reconciled: false
    reason: locked by another writer
evidence:
  candidate_transcripts:
    - transcript: /home/u/.claude/projects/-work-repo/s1.jsonl
      session: s1
      capture_limitations:
        - session: s1
          transcript: /home/u/.claude/projects/-work-repo/s1.jsonl
          from_ordinal: 0
          to_ordinal: 19
          unknown_records: {}
          malformed_lines: 0
          abandoned_tool_uses: 1
          failed_tool_uses: 0
          outside_checkout: 0
          conflicting_tool_results: 0
          unmatched_tool_results: 0
          session_mismatch: 0
          unnamed_tool_uses: 0
          unsupported_tool_uses: 0
          unconfirmed_shell_writes: 0
      localized: false
  unplaced_edits: 0
  unreconciled_checkouts:
    - checkout: /work/repo/.claude/worktrees/x
      transcripts: 2
      reason: records directory locked
  conflicting_edits: []
on_disk:
  state: captured
line:
  number: 1
  text: "fn greet() {}\n"
  differs_from_head: "yes"
  differs_from_head_reason: ~
  status:
    kind: composed
  chains:
    - id: 0
      class: exact_from_base
      head: e1
      edits:
        - e1
      end:
        kind: base
  set_aside: []
  outcome:
    kind: attributed
    edits:
      - edit: e1
        relation: introduced
        classes:
          - exact_from_base
  provenance:
    class: exact_from_base
    kind: agreed
    provenance:
      earlier: []
      origins:
        - kind: introduced
          value: e1
      whitespace_only: []
edits:
  e1:
    session: s1
    transcript: /home/u/.claude/projects/-work-repo/s1.jsonl
    turn: a1
    time: "2026-09-28T10:00:01.000Z"
    worktree: /work/repo
    operation: replace
    prompt:
      turn: u1
      role: human
      excerpt:
        state: retained
        value: Add a greeting function and clean up.
conflicting_edits: []
